<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DPad Says</string>

    <string name="score">Score: </string>
    <string name="high_score">High score: </string>
    
    <string name="sorry">Sorry!</string>
    <string name="try_again">Hit the DPad to try again.</string>

    <string name="welcome">Welcome to DPad Says!</string>
    <string name="instructions_1">Use the Directional Pad to play.</string>
    <string name="instructions_2">Hit the DPad to start.</string>
    
    <string name="red">red</string>
    <string name="blue">blue</string>
    <string name="green">green</string>
    <string name="yellow">yellow</string>
    
</resources>