<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".GameActivity" >

    <TextView
        android:id="@+id/center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/generic_black"
        android:text="" />

    <ImageView
        android:id="@+id/yellow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/side_spacing"
        android:contentDescription="@string/yellow"
        android:src="@drawable/yellow" />

    <ImageView
        android:id="@+id/green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/center"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/side_spacing"
        android:contentDescription="@string/green"
        android:src="@drawable/green" />

    <ImageView
        android:id="@+id/red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginRight="@dimen/big_side_spacing"
        android:layout_toLeftOf="@id/center"
        android:contentDescription="@string/red"
        android:src="@drawable/red" />

    <ImageView
        android:id="@+id/blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/big_side_spacing"
        android:layout_toRightOf="@id/center"
        android:contentDescription="@string/blue"
        android:src="@drawable/blue" />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/score"
        android:textSize="@dimen/font_size" />

    <TextView
        android:id="@+id/high_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/high_score"
        android:textSize="@dimen/font_size" />

    <LinearLayout
        android:id="@+id/error_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@color/generic_white"
        android:orientation="vertical"
        android:padding="@dimen/small_side_spacing"
        android:visibility="invisible" >

        <LinearLayout
            android:id="@+id/error_box_inside"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/generic_black"
            android:orientation="vertical"
            android:padding="@dimen/side_spacing" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/sorry"
                android:textSize="@dimen/font_size" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/try_again"
                android:textSize="@dimen/font_size" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/intro_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@color/generic_white"
        android:orientation="vertical"
        android:padding="@dimen/small_side_spacing"
        android:visibility="visible" >

        <LinearLayout
            android:id="@+id/intro_box_inside"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/generic_black"
            android:orientation="vertical"
            android:padding="@dimen/side_spacing" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/welcome"
                android:textSize="@dimen/font_size" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/instructions_1"
                android:textSize="@dimen/font_size" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:text="@string/instructions_2"
                android:textSize="@dimen/font_size" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>